--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,33 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/sENFP</item>
         <!-- Customize your theme here. -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="ExpandedTextAppearance" parent="Theme.PersonaBook">
+        <item name="fontFamily">@font/nanum_regular</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">0sp</item>
+        <item name="android:textColor">@android:color/transparent</item>
+    </style>
+    <style name="CollapsedTextAppearance" parent="Theme.PersonaBook">
+        <item name="fontFamily">@font/nanum_bold</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/sENFP</item>
+        <item name="android:textSize">28sp</item>
+    </style>
+    <style name="RegularText" parent="android:TextAppearance">
+        <item name="android:fontFamily">@font/nanum_regular</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/fontWColor</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+    <style name="BoldText" parent="android:TextAppearance">
+        <item name="android:fontFamily">@font/nanum_bold</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/fontWColor</item>
+        <item name="android:textSize">22sp</item>
     </style>
 </resources>
