--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <!-- Customize your theme here. -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="actionOverflowMenuStyle">@style/PopupMenu</item>
     </style>
     <style name="ExpandedTextAppearance" parent="Theme.PersonaBook">
         <item name="fontFamily">@font/nanum_regular</item>
@@ -38,5 +39,18 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/fontWColor</item>
         <item name="android:textSize">22sp</item>
+    </style>
+    <style name="PopupMenu" parent="Widget.AppCompat.PopupMenu">
+        <item name="android:popupElevation">2dp</item>
+        <item name="android:dropDownHorizontalOffset">-6dp</item>
+        <item name="android:dropDownVerticalOffset">6dp</item>
+        <item name="android:popupBackground">@drawable/bottom_app_bar_popup</item>
+    </style>
+    <style name="BottomAppBar"
+        parent="Widget.Design.BottomNavigationView">
+        <item name="fontFamily">@font/nanum_bold</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/fontBColor</item>
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
