--- a/app/src/main/res/layout/activity_edit_info.xml
+++ b/app/src/main/res/layout/activity_edit_info.xml
@@ -4,22 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bgColor"
     tools:context=".EditInfoActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/sINTJ"
+        android:background="@color/bgColor"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
+        android:theme="@style/EditToolBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/BoldText"
-            android:text="신규 페르소나"
+            android:textColor="@color/fontBColor"
+            tools:text="title"
             android:layout_gravity="center"/>
     </androidx.appcompat.widget.Toolbar>
 
