--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,41 +16,63 @@
         <item name="windowNoTitle">true</item>
         <item name="actionOverflowMenuStyle">@style/PopupMenu</item>
     </style>
+
     <style name="ExpandedTextAppearance" parent="Theme.PersonaBook">
         <item name="fontFamily">@font/nanum_regular</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">0sp</item>
         <item name="android:textColor">@android:color/transparent</item>
     </style>
+
     <style name="CollapsedTextAppearance" parent="Theme.PersonaBook">
         <item name="fontFamily">@font/nanum_bold</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/sENFP</item>
         <item name="android:textSize">28sp</item>
     </style>
+
     <style name="RegularText" parent="android:TextAppearance">
         <item name="android:fontFamily">@font/nanum_regular</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/fontWColor</item>
         <item name="android:textSize">22sp</item>
     </style>
+
     <style name="BoldText" parent="android:TextAppearance">
         <item name="android:fontFamily">@font/nanum_bold</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/fontWColor</item>
         <item name="android:textSize">22sp</item>
     </style>
+
     <style name="PopupMenu" parent="Widget.AppCompat.PopupMenu">
         <item name="android:popupElevation">2dp</item>
         <item name="android:dropDownHorizontalOffset">-6dp</item>
         <item name="android:dropDownVerticalOffset">6dp</item>
         <item name="android:popupBackground">@drawable/bottom_app_bar_popup</item>
     </style>
-    <style name="BottomAppBar"
-        parent="Widget.Design.BottomNavigationView">
+
+    <style name="BottomAppBar" parent="Widget.Design.BottomNavigationView">
         <item name="fontFamily">@font/nanum_bold</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/fontBColor</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">22sp</item>
     </style>
+
+    <style name="EditToolBar" parent="Widget.Design.BottomNavigationView">
+        <item name="fontFamily">@font/nanum_bold</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/fontWColor</item>
+        <item name="actionMenuTextColor">@color/fontBColor</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="Theme.PersonaBook.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.PersonaBook.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.PersonaBook.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
