--- a/app/src/main/res/layout/activity_personality_type.xml
+++ b/app/src/main/res/layout/activity_personality_type.xml
@@ -70,21 +70,57 @@
             android:background="@drawable/personality_type"
             android:paddingHorizontal="20dp"
             android:paddingVertical="30dp">
-            <TextView
-                android:id="@+id/tv_total"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/BoldText"
-                android:textColor="@color/fontBColor"
-                android:text="총 6명"/>
-            <TextView
-                android:id="@+id/tv_totalMale"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/BoldText"
+                    android:textColor="@color/fontBColor"
+                    android:text="총 "/>
+                <TextView
+                    android:id="@+id/tv_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/BoldText"
+                    android:textColor="@color/fontBColor"
+                    android:text="0"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/BoldText"
+                    android:textColor="@color/fontBColor"
+                    android:layout_marginStart="2dp"
+                    android:text="명"/>
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textAppearance="@style/RegularText"
-                android:textColor="@color/fontBColor"
-                android:text="남자 5명"/>
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/RegularText"
+                    android:textColor="@color/fontBColor"
+                    android:text="남자 "/>
+                <TextView
+                    android:id="@+id/tv_totalMale"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/RegularText"
+                    android:textColor="@color/fontBColor"
+                    android:text="0"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/RegularText"
+                    android:textColor="@color/fontBColor"
+                    android:layout_marginStart="2dp"
+                    android:text="명"/>
+            </LinearLayout>
             <androidx.cardview.widget.CardView
                 android:layout_width="70dp"
                 android:layout_height="40dp"
@@ -93,6 +129,32 @@
                 android:layout_marginVertical="5dp"
                 app:cardBackgroundColor="@color/bgColor">
             </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/RegularText"
+                    android:textColor="@color/fontBColor"
+                    android:text="여자 "/>
+                <TextView
+                    android:id="@+id/tv_totalFemale"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/RegularText"
+                    android:textColor="@color/fontBColor"
+                    android:text="0"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/RegularText"
+                    android:textColor="@color/fontBColor"
+                    android:layout_marginStart="2dp"
+                    android:text="명"/>
+            </LinearLayout>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
