--- a/app/src/main/res/layout/activity_add_persona.xml
+++ b/app/src/main/res/layout/activity_add_persona.xml
@@ -25,4 +25,268 @@
             android:text="신규 페르소나"
             android:layout_gravity="center"/>
     </androidx.appcompat.widget.Toolbar>
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="20dp"
+        android:text="이름"
+        android:textAppearance="@style/BoldText"
+        android:textColor="@color/fontBColor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <EditText
+        android:id="@+id/et_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:layout_marginTop="6dp"
+        android:layout_marginHorizontal="20dp"
+        android:textAppearance="@style/BoldText"
+        android:hint="최대 10글자"
+        android:backgroundTint="@color/disableColor"
+        android:textCursorDrawable="@drawable/et_name_cursor"
+        android:textColorHint="@color/disableColor"
+        android:textColor="@color/fontBColor"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/tv_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="20dp"
+        android:weightSum="2"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:id="@+id/ll_sex"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <TextView
+                android:id="@+id/tv_sex"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="성별"
+                android:textAppearance="@style/BoldText"
+                android:textColor="@color/fontBColor"
+                app:layout_constraintStart_toStartOf="@+id/tv_name"
+                app:layout_constraintTop_toBottomOf="@+id/et_name" />
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:checked="true"
+                    android:id="@+id/rb_male"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/select_left_bg"
+                    android:textColor="@drawable/select_sex_text"
+                    android:textAlignment="center"
+                    android:paddingHorizontal="15dp"
+                    android:button="@null"
+                    android:textAppearance="@style/BoldText"
+                    android:textSize="16sp"
+                    android:text="남자" />
+
+                <RadioButton
+                    android:id="@+id/rb_female"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/select_right_bg"
+                    android:textColor="@drawable/select_sex_text"
+                    android:textAlignment="center"
+                    android:paddingHorizontal="15dp"
+                    android:button="@null"
+                    android:textAppearance="@style/BoldText"
+                    android:textSize="16sp"
+                    android:text="여자" />
+            </RadioGroup>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <TextView
+                android:id="@+id/tv_personality"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="성격유형"
+                android:textAppearance="@style/BoldText"
+                android:textColor="@color/fontBColor"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="6dp"
+                android:gravity="center"
+                android:weightSum="2">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+                    <RadioGroup
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:weightSum="2"
+                        android:orientation="horizontal">
+                        <RadioButton
+                            android:checked="true"
+                            android:id="@+id/rb_i"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/select_left_bg"
+                            android:textColor="@drawable/select_sex_text"
+                            android:textAlignment="center"
+                            android:paddingHorizontal="15dp"
+                            android:button="@null"
+                            android:textAppearance="@style/BoldText"
+                            android:textSize="16sp"
+                            android:text="I" />
+
+                        <RadioButton
+                            android:id="@+id/rb_e"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/select_right_bg"
+                            android:textColor="@drawable/select_sex_text"
+                            android:textAlignment="center"
+                            android:paddingHorizontal="15dp"
+                            android:button="@null"
+                            android:textAppearance="@style/BoldText"
+                            android:textSize="16sp"
+                            android:text="E" />
+                    </RadioGroup>
+                    <RadioGroup
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp"
+                        android:orientation="horizontal">
+                        <RadioButton
+                            android:checked="true"
+                            android:id="@+id/rb_s"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/select_left_bg"
+                            android:textColor="@drawable/select_sex_text"
+                            android:textAlignment="center"
+                            android:paddingHorizontal="15dp"
+                            android:button="@null"
+                            android:textAppearance="@style/BoldText"
+                            android:textSize="16sp"
+                            android:text="S" />
+
+                        <RadioButton
+                            android:id="@+id/rb_n"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/select_right_bg"
+                            android:textColor="@drawable/select_sex_text"
+                            android:textAlignment="center"
+                            android:paddingHorizontal="15dp"
+                            android:button="@null"
+                            android:textAppearance="@style/BoldText"
+                            android:textSize="16sp"
+                            android:text="N" />
+                    </RadioGroup>
+                    <RadioGroup
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp"
+                        android:orientation="horizontal">
+                        <RadioButton
+                            android:checked="true"
+                            android:id="@+id/rb_t"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/select_left_bg"
+                            android:textColor="@drawable/select_sex_text"
+                            android:textAlignment="center"
+                            android:paddingHorizontal="15dp"
+                            android:button="@null"
+                            android:textAppearance="@style/BoldText"
+                            android:textSize="16sp"
+                            android:text="T" />
+
+                        <RadioButton
+                            android:id="@+id/tb_f"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/select_right_bg"
+                            android:textColor="@drawable/select_sex_text"
+                            android:textAlignment="center"
+                            android:paddingHorizontal="15dp"
+                            android:button="@null"
+                            android:textAppearance="@style/BoldText"
+                            android:textSize="16sp"
+                            android:text="F" />
+                    </RadioGroup>
+                    <RadioGroup
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp"
+                        android:orientation="horizontal">
+                        <RadioButton
+                            android:checked="true"
+                            android:id="@+id/rb_j"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/select_left_bg"
+                            android:textColor="@drawable/select_sex_text"
+                            android:textAlignment="center"
+                            android:paddingHorizontal="15dp"
+                            android:button="@null"
+                            android:textAppearance="@style/BoldText"
+                            android:textSize="16sp"
+                            android:text="J" />
+
+                        <RadioButton
+                            android:id="@+id/rb_p"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/select_right_bg"
+                            android:textColor="@drawable/select_sex_text"
+                            android:textAlignment="center"
+                            android:paddingHorizontal="15dp"
+                            android:button="@null"
+                            android:textAppearance="@style/BoldText"
+                            android:textSize="16sp"
+                            android:text="P" />
+                    </RadioGroup>
+                </LinearLayout>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAppearance="@style/BoldText"
+                    android:textColor="@color/fontBColor"
+                    android:gravity="center"
+                    android:text=" -  A/T"/>
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
