--- a/app/src/main/res/layout/activity_personality_type.xml
+++ b/app/src/main/res/layout/activity_personality_type.xml
@@ -95,6 +95,11 @@
                     android:layout_marginStart="2dp"
                     android:text="명"/>
             </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            </androidx.recyclerview.widget.RecyclerView>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -121,14 +126,6 @@
                     android:layout_marginStart="2dp"
                     android:text="명"/>
             </LinearLayout>
-            <androidx.cardview.widget.CardView
-                android:layout_width="70dp"
-                android:layout_height="40dp"
-                app:cardCornerRadius="10dp"
-                android:layout_margin="4dp"
-                android:layout_marginVertical="5dp"
-                app:cardBackgroundColor="@color/bgColor">
-            </androidx.cardview.widget.CardView>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
