--- a/app/src/main/res/layout/activity_edit_info.xml
+++ b/app/src/main/res/layout/activity_edit_info.xml
@@ -25,44 +25,14 @@
             android:layout_gravity="center"
             android:textAppearance="@style/BoldText"
             android:textColor="@color/fontBColor"
-            tools:text="title" />
+            android:text="내 정보"/>
     </androidx.appcompat.widget.Toolbar>
-
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="20dp"
-        android:text="이름"
-        android:textAppearance="@style/BoldText"
-        android:textColor="@color/fontBColor"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
-    <EditText
-        android:id="@+id/et_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_marginTop="6dp"
-        android:layout_marginHorizontal="20dp"
-        android:textAppearance="@style/BoldText"
-        android:hint="최대 10글자"
-        android:backgroundTint="@color/disableColor"
-        android:textCursorDrawable="@drawable/et_name_cursor"
-        android:textColorHint="@color/disableColor"
-        android:textColor="@color/fontBColor"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/tv_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_name"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="30dp"
         android:layout_marginHorizontal="20dp"
@@ -230,7 +200,7 @@
                             android:text="T" />
 
                         <RadioButton
-                            android:id="@+id/tb_f"
+                            android:id="@+id/rb_f"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_height="wrap_content"
