--- a/app/src/main/res/layout/activity_personality_type.xml
+++ b/app/src/main/res/layout/activity_personality_type.xml
@@ -36,6 +36,7 @@
                         android:text="나와 "
                         android:textAppearance="@style/RegularText"/>
                     <TextView
+                        android:id="@+id/tv_relation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         tools:text="무난한"
