--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,9 +12,10 @@
     <color name="fontWColor">#f5f5f5</color>
     <color name="fontBColor">#a0000000</color>
     <color name="disableColor">#EBECEE</color>
-    <color name="badRelation">#</color>
-    <color name="normalRelation"></color>
-    <color name="goodRelation"></color>
+    <color name="badRelation">#c72d2d</color>
+    <color name="normalRelation">#f2db68</color>
+    <color name="goodRelation">#6cb77e</color>
+    <color name="favRelation">#ff54bb</color>
 
     <color name="ISTJ">#5fba51</color>
     <color name="sISTJ">#995fba51</color>
